app/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: httpshow
  labels:
    app: httpshow
