app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpshow
  namespace: httpshow
  labels:
    app: httpshow
spec:
  type: ClusterIP
  selector:
    app: httpshow
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
